<resources>
    <string name="app_name">Bengkel</string>
    <string name="title_activity_maps">Map</string>
    <string name="tambah_data">Tambah Data</string>
    <string name="tanggal_reservasi">Tanggal Reservasi</string>
    <string name="plat_nomor">Plat Nomor</string>
    <string name="jenis_merk_kendaraan">Jenis/Merk Kendaraan</string>
    <string name="nama_pemilik">Nama Pemilik</string>
    <string name="keluhan">Keluhan</string>
    <string name="simpan">Simpan</string>
    <string name="lihat_data">Lihat Data</string>
    <string name="tanggal">Tanggal</string>
</resources>